# LearnOpenGLGK

./: .gitignore  CMakeLists.txt  README.md  build_vs2019.bat  chaos_pose.cpp  opengl.sln  opengl.vcxproj  opengl.vcxproj.filters
inlcude/glad/: glad.h
lib/: glfw3.lib  soil2-debug.lib
resources/CompanionDiskFilesC++2E/Figures+Equations/Ch06_3DModels/: Fig06_04.TIF  Fig06_05.TIF  Fig06_09.TIF
resources/CompanionDiskFilesC++2E/Figures+Equations/Ch16_RayTracing/: Fig16_07.TIF  Fig16_08.TIF  Fig16_09.TIF  Fig16_10.TIF  Fig16_12.TIF  Fig16_13.TIF
src/: glad.c  main.cpp  opengl.cpp  utils.cpp  utils.h
src/shaders/: fragShader.glsl  vertShader.glsl
x64/Debug/: opengl.exe.recipe  opengl.ilk  opengl.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl.lastbuildstate
